fix: tab alignment on newer firefox versions

--- a/userChrome.css
+++ b/userChrome.css
@@ -42,6 +42,7 @@
 	height: var(--tab-height);
 	font-size: var(--tab-font-size) !important;
 	min-height: 0 !important;
+	align-items: center !important;
 }
 .tabbrowser-tab[fadein]:not([pinned]) {
 	max-width: var(--max-tab-width) !important;
